<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_primary" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_route"
            android:title="@string/nav_find_green_route"
            android:icon="@drawable/ic_routes" />
        <item
            android:id="@+id/nav_vehicle_details"
            android:title="@string/nav_vehicle_details"
            android:icon="@drawable/ic_pin" />
    </group>

    <item android:enabled="false" android:title="" />

    <group android:id="@+id/group_secondary">
        <item
            android:id="@+id/nav_rewards"
            android:title="@string/nav_rewards"
            android:icon="@drawable/ic_options" />
        <item
            android:id="@+id/nav_support"
            android:title="@string/nav_support"
            android:icon="@drawable/ic_profile" />
    </group>

</menu>
