<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="bottom"
    android:background="@color/green_500">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/nav_header_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/pragatidhara_logo"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:layout_marginEnd="12dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_header_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nav_header_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_mobile"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
